<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TilePuzzle</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="steps_total">Total Steps:</string>
    <string name="congrat">CONGRATULATIONS!!!</string>
    <string name="win">YOU WIN!!!!!!</string>
    <string name="ubc_logo">Logo</string>
    <string name="index">Index</string>
    <string name="solution_display">Solution</string>
    <string name="GamePlayBoardMedium">Tile Puzzle Level : Medium</string>
    

</resources>
