<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
		
    <ListView
        android:id="@+id/image_list"
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:gravity="center" />
    
    
    <!-- Nested View for Buttons -->
    	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center" 
			>
			<Button 
		        android:id="@+id/Difficulty_Easy"
		        android:text="@string/easy"
		        android:layout_width="110dp"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="7dp"
		        android:layout_marginLeft="5dp"
		        android:layout_marginRight="7dp"
		        android:onClick="ImageBreakdown"
		        />


			
		    <Button
		        android:id="@+id/Difficulty_Medium"
		        android:text="@string/medium"
		        android:layout_width="110dp"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="7dp"
				android:layout_marginLeft="7dp"
				android:layout_marginRight="7dp"
		        android:onClick="ImageBreakdown"
		        />
		    
		  	<Button
		        android:id="@+id/Difficulty_Hard"
		        android:text="@string/hard"
		        android:layout_width="110dp"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="7dp"
		        android:layout_marginLeft="7dp"
		        android:layout_marginRight="5dp"
		        android:onClick="ImageBreakdown"
		        />
		    
		</LinearLayout>
    
</LinearLayout>